--- a/index.html
+++ b/index.html
@@ -5,21 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simple Black Jack</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="createDeck.js"></script>
-	<script src="play.js"></script>
+    <script src="play.js"></script>
   </head>
   <body>
-        <div class = "container">
-            <div class = "dealer">
-                <h1>Dealer Container</h1>
-            </div>
-            <div class = "player">
-                <h1>Player Container</h1>
-            </div>
-            <div class = "buttons">
-                <h1>Button Container</h1>
-            </div>
-        </div>
+      <button class="btn btn-primary btn-lg">Deal!</button>
   </body>
 </html>
