added hit, stand and start new round buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="createDeck.js"></script>
-    <script src="play.js"></script>
+    <script src="play.js" defer></script>
   </head>
   <body>
-      <button class="btn btn-primary btn-lg">Deal!</button>
+    <div class="button-div">
+      <button class="deal btn btn-primary btn-lg">Deal</button>
+      <button class="hit btn btn-primary btn-lg">Hit</button>
+      <button class="stand btn btn-primary btn-lg">Stand</button>
+      <button class="newround btn btn-primary btn-lg">Start New Round</button>
+    </div>
   </body>
 </html>
