adding card container and divs for dealer, the deck and the player

--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
   </head>
   <body>
     <div class="button-div">
-      <button class="deal btn btn-primary btn-lg">Deal</button>
-      <button class="hit btn btn-primary btn-lg">Hit</button>
-      <button class="stand btn btn-primary btn-lg">Stand</button>
-      <button class="newround btn btn-primary btn-lg">Start New Round</button>
+      <button class="deal btn btn-primary btn-md btn-block">Deal</button>
+      <button class="hit btn btn-primary btn-md btn-block">Hit</button>
+      <button class="stand btn btn-primary btn-md btn-block">Stand</button>
+      <button class="newround btn btn-primary btn-md btn-block">Start New Round</button>
+    </div>
+    <div class="card-container">
+      <div class="dealer-cards">
+
+      </div>
+      <div class="deck-cards">
+
+      </div>
+      <div class="player-cards">
+
+      </div>
     </div>
   </body>
 </html>
