added dealer and player text to respective containers

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
     <div class="card-container">
       <div class="dealer-cards">
-
+        <h1 class="dealer-text">Dealer</h1>
       </div>
       <div class="deck-cards">
         <img src="assets/backcard.png" alt="Back of card" href="https://www.pngwing.com/en/free-png-svqrs">
       </div>
       <div class="player-cards">
-
+        <h1 class="player-text">Player</h1>
       </div>
     </div>
   </body>
