--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
   </head>
   <body>
     <div class="button-div">
-      <button class="deal btn btn-primary btn-md btn-block">Deal</button>
-      <button class="hit btn btn-primary btn-md btn-block">Hit</button>
-      <button class="stand btn btn-primary btn-md btn-block">Stand</button>
-      <button class="newround btn btn-primary btn-md btn-block">Start New Round</button>
+      <button class="deal btn btn-dark btn-md btn-block">Deal</button>
+      <button class="hit btn btn-dark btn-md btn-block">Hit</button>
+      <button class="stand btn btn-dark btn-md btn-block">Stand</button>
+      <button class="newround btn btn-dark btn-md btn-block">Start New Round</button>
     </div>
     <div class="card-container">
       <div class="dealer-cards">
-        <h1 class="dealer-text">Dealer</h1>
+        <h2 class="dealer-text">Dealer</h2>
       </div>
       <div class="deck-cards">
         <img src="assets/backcard.png" alt="Back of card" href="https://www.pngwing.com/en/free-png-svqrs">
       </div>
       <div class="player-cards">
-        <h1 class="player-text">Player</h1>
+        <h2 class="player-text">Player</h2>
       </div>
     </div>
   </body>
