--- a/index.html
+++ b/index.html
@@ -20,20 +20,28 @@
         <button class="newround btn btn-dark btn-md btn-block">Start New Round</button>
     </div>
     <div class="card-container">
+      <h2 class="dealer-text">Dealer</h2>
+      <h2 class="player-text">Player</h2>
         <div class="dealer-cards">
-          <h2 class="dealer-text">Dealer</h2>
         </div>
-          <div class="dealer-total"></div>
+          <div class="outcome">
+            <div class="hand-outcome"><h2 class="outcome-text"></h2></div>
+          </div>
           <div class="deck-cards">
             <img src="assets/backcard.png" alt="Back of card" href="https://www.pngwing.com/en/free-png-svqrs">
           </div>
           <div class="player-details">
-            <div class="player-total"><p>Player Total:<p class="player-total-text"></p></p></div>
-            <div class="player-status"></div>
+            <div class="player-total"><p class="player-total-text"></p></div>
             <div class="player-currency"><p>Currency:</p></div>
           </div>
+        
         <div class="player-cards">
-          <h2 class="player-text">Player</h2>
+        </div>
+        <div class="bet-div">
+          <button class="one btn btn-dark btn-md btn-block">Bet $1</button>
+          <button class="ten btn btn-dark btn-md btn-block">Bet $10</button>
+          <button class="hundred btn btn-dark btn-md btn-block">Bet $100</button>
+          <button class="five-hundred btn btn-dark btn-md btn-block">Bet $500</button>
         </div>
     </div>
   </body>
