--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             <img src="assets/backcard.png" alt="Back of card" href="https://www.pngwing.com/en/free-png-svqrs">
           </div>
           <div class="player-details">
-            <div class="player-total"><p class="player-total-text"></p></div>
-            <div class="player-currency"><p>Currency:</p></div>
+            <div class="player-total"><p>Player Total:</p><div><p class="player-total-text"></p></div></div>
+            <div class="player-bet"><p>Bet Amount:</p><div><p class="player-bet-text"></p></div></div>
+            <div class="player-currency"><p>Currency:</p><div><p class="player-currency-text">$2000</p></div></div>
           </div>
         
         <div class="player-cards">
