--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
         <button class="newround btn btn-dark btn-md btn-block">Start New Round</button>
     </div>
     <div class="card-container">
-      <h2 class="dealer-text">Dealer</h2>
-      <h2 class="player-text">Player</h2>
+      <!-- <h2 class="dealer-text">Dealer</h2>
+      <h2 class="player-text">Player</h2> -->
         <div class="dealer-cards">
         </div>
           <div class="outcome">
             <div class="hand-outcome"><h2 class="outcome-text"></h2></div>
           </div>
           <div class="deck-cards">
+            <div class="dealer-text"><h6>Dealer</h6></div>
             <img src="assets/backcard.png" alt="Back of card" href="https://www.pngwing.com/en/free-png-svqrs">
+            <div class="player-text"><h6>Player</h6></div>
           </div>
           <div class="player-details">
             <div class="player-total"><p>Player Total:</p><div><p class="player-total-text"></p></div></div>
             <div class="player-bet"><p>Bet Amount:</p><div><p class="player-bet-text"></p></div></div>
-            <div class="player-currency"><p>Currency:</p><div><p class="player-currency-text">$2000</p></div></div>
+            <div class="player-currency"><p>Currency: $</p><div><p class="player-currency-text"></p></div></div>
           </div>
         
         <div class="player-cards">
