removed bet buttons and added bet input

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
         <div class="player-cards">
         </div>
         <div class="bet-div">
-          <button class="one btn btn-dark btn-md btn-block">Bet $1</button>
-          <button class="ten btn btn-dark btn-md btn-block">Bet $10</button>
-          <button class="hundred btn btn-dark btn-md btn-block">Bet $100</button>
-          <button class="five-hundred btn btn-dark btn-md btn-block">Bet $500</button>
+          <div>
+            <label for="bet">Place your bet: $</label>
+          </div>
+          <div>
+            <input type="text" class="bet-control" id="bet" size="2">
+          </div>
         </div>
     </div>
   </body>
