cleaned up form element, cleaned up styles

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </div>
         <div class="bet-div">
           <div class="form-div">
-            <form class="form-div" action="#" id="updateBet">
+            <form class="form-div" action="#">
               <div><label for="bet">Place your bet!</label><br></div>
-              <div><input type="number" id="bet" name="updateBet" size="2"><br></div>
-              <div><input type="submit" value="Submit" onClick="updateBet()"></div>
+              <div><input type="number" id="bet" size="2"><br></div>
+              <div><input type="submit" value="Submit" id="bet-submit"></div>
             </form>
         </div>
     </div>
