--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <div class="player-cards">
         </div>
         <div class="bet-div">
-          <div class="form-div">
-            <form class="form-div" action="#">
+          <div id="form">
+            <form id="betform" action="#">
               <div><label for="bet">Place your bet!</label><br></div>
-              <div><input type="number" id="bet" size="2"><br></div>
+              <div><input type="number" value="0" id="bet" size="2"><br></div>
               <div><input type="submit" value="Submit" id="bet-submit"></div>
             </form>
         </div>
