working on bet logic/value updates and added text for player to bet and click deal

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <div class="card-container">
       <!-- <h2 class="dealer-text">Dealer</h2>
       <h2 class="player-text">Player</h2> -->
+      <h2 id="alert">Submit your bet below & deal!</h2>
+      <h2 id="zero-alert"></h2>
         <div class="dealer-cards">
         </div>
           <div class="outcome">
-            <div class="hand-outcome"><h3 class="outcome-text"></h3></div>
+            <div class="hand-outcome"><h5 class="outcome-text"></h5></div>
           </div>
           <div class="deck-cards">
             <div class="dealer-text"><h6>Dealer</h6></div>
@@ -34,7 +36,7 @@
           </div>
           <div class="player-details">
             <div class="player-total"><p>Player Total:</p><div><p class="player-total-text"></p></div></div>
-            <div class="player-bet"><p>Bet Amount:</p><div><p class="player-bet-text"></p></div></div>
+            <div class="player-bet"><p>Bet Amount: $</p><div><p class="player-bet-text"></p></div></div>
             <div class="player-currency"><p>Currency: $</p><div><p class="player-currency-text"></p></div></div>
           </div>
         
@@ -43,7 +45,7 @@
         <div class="bet-div">
           <div id="form">
             <form id="betform" action="#">
-              <div><label for="bet">Place your bet!</label><br></div>
+              <div><label for="bet">Place bet here:</label><br></div>
               <div><input type="number" value="0" id="bet" size="2"><br></div>
               <div><input type="submit" value="Submit" id="bet-submit"></div>
             </form>
