added h4 element for various alerts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!-- <h2 class="dealer-text">Dealer</h2>
       <h2 class="player-text">Player</h2> -->
       <h2 id="alert">Submit your bet below & deal!</h2>
-      <h2 id="zero-alert"></h2>
+      <h4 id="zero-alert"></h4>
         <div class="dealer-cards">
         </div>
           <div class="outcome">
@@ -46,7 +46,7 @@
           <div id="form">
             <form id="betform" action="#">
               <div><label for="bet">Place bet here:</label><br></div>
-              <div><input type="number" value="0" id="bet" size="2"><br></div>
+              <div><input type="number" value="1" min="1" id="bet" size="2"><br></div>
               <div><input type="submit" value="Submit" id="bet-submit"></div>
             </form>
         </div>
