--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <div class="button-div">
-        <button class="deal btn btn-dark btn-md btn-block">Deal</button>
-        <button class="hit btn btn-dark btn-md btn-block">Hit</button>
-        <button class="stand btn btn-dark btn-md btn-block">Stand</button>
-        <button class="newround btn btn-dark btn-md btn-block">Start New Round</button>
+        <button class="btn-deal">Deal</button>
+        <button class="btn-hit">Hit</button>
+        <button class="btn-stand">Stand</button>
+        <button class="btn-new">Start New Round</button>
     </div>
     <div class="card-container">
       <!-- <h2 class="dealer-text">Dealer</h2>
