--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="createDeck.js"></script>
     <script src="play.js" defer></script>
   </head>
   <body>
-    <div class="button-div">
-        <button class="btn-deal">Deal</button>
-        <button class="btn-hit">Hit</button>
-        <button class="btn-stand">Stand</button>
-        <button class="btn-new">Start New Round</button>
+    <div class="btn-div">
+        <button class="deal btn-deal">Deal</button>
+        <button class="hit btn-hit">Hit</button>
+        <button class="stand btn-stand">Stand</button>
+        <button class="newround btn-new">Start New Round</button>
     </div>
     <div class="card-container">
       <!-- <h2 class="dealer-text">Dealer</h2>
