adding alertconfig partial file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="card-container">
       <!-- <h2 class="dealer-text">Dealer</h2>
       <h2 class="player-text">Player</h2> -->
-      <h2 id="alert">Submit your bet below & hit Deal above!</h2>
+      <h2 id="submit-alert">Submit your bet below & hit Deal above!</h2>
       <h4 id="zero-alert"></h4>
         <div class="dealer-cards">
         </div>
