--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <div class="card-container">
       <!-- <h2 class="dealer-text">Dealer</h2>
       <h2 class="player-text">Player</h2> -->
-      <h2 id="submit-alert">Submit your bet below & hit Deal above!</h2>
-      <h4 id="zero-alert"></h4>
+      <h1 id="submit-alert">Submit your bet below & hit Deal above!</h1>
+      <h2 id="zero-alert"></h2>
         <div class="dealer-cards">
         </div>
           <div class="outcome">
-            <div class="hand-outcome"><h5 class="outcome-text"></h5></div>
+            <div class="hand-outcome"><h3 class="outcome-text"></h3></div>
           </div>
           <div class="deck-cards">
-            <div class="dealer-text"><h6>Dealer</h6></div>
+            <div class="dealer-text"><h4>Dealer</h4></div>
               <a href="https://code.google.com/archive/p/vector-playing-cards/">
-                <img src="assets/backcard.png" alt="Back of card">
+                <img id="back-card" src="assets/backcard.png" alt="Back of card">
               </a>
-            <div class="player-text"><h6>Player</h6></div>
+            <div class="player-text"><h4>Player</h4></div>
           </div>
           <div class="player-details">
             <div class="player-total"><p>Player Total:</p><div><p class="player-total-text"></p></div></div>
